boton saludar otra vez xD

--- a/templates/index_tpl.html
+++ b/templates/index_tpl.html
@@ -27,9 +27,10 @@
     </style>
 </head>
 <body>
+	<button id="update_btn">Saludar otra vez</button>
 	<div class="salutation">
 		<p id="text"></p>
   </div>
-  <script src="load.js"></script>
+	<script src="load.js"></script>
 </body>
 </html>
